--- a/css/products.css
+++ b/css/products.css
@@ -47,6 +47,7 @@
     transition: all 0.3s ease-in-out;
     visibility: hidden;
     margin-bottom: 2rem;
+    text-align: center;
 }
 .success-message > * {
     font-family: inherit;
